Updated the NGINX entry to write logs for data files accessed

--- a/templates/nginx.static.conf
+++ b/templates/nginx.static.conf
@@ -1,5 +1,6 @@
 server {
-    listen                          80;
-    server_name                     data.goddard.com;
-    root                            /var/goddard;
+    listen              80;
+    server_name         data.goddard.com;
+    root                /var/goddard;
+    access_log          /var/log/nginx/data.goddard.com.log;
 }
