Updated squid config to use

--- a/templates/squid.conf
+++ b/templates/squid.conf
@@ -5,6 +5,8 @@ http_port 3128
 # https_port 3130 transparent
 strip_query_terms off
 
+# debug_options ALL,1 28,4 29,6 82,6
+
 # access_log /var/log/nginx/squid.log squid
 
 acl all src all
@@ -19,31 +21,18 @@ acl SSL_ports port 443        # https
 # acl SSL_ports port 563        # snews
 # acl SSL_ports port 873        # rsync
 acl Safe_ports port 80        # http
-acl Safe_ports port 3120  # proxy
-acl Safe_ports port 3128        # ftp
 acl Safe_ports port 443        # https
 acl purge method PURGE
 acl CONNECT method CONNECT
 
-external_acl_type checkwhitelist children=20 %METHOD %PROTO %DST %PATH /var/goddard/acl.py
-
-acl opera_match url_regex "opera"
-acl urlmatch url_regex "/var/goddard/urls"
-# acl whitelist dstdomain "/var/goddard/whitelist"
-acl whitelist external checkwhitelist
-
+acl whitelist dstdomain "/var/goddard/whitelist"
 # Deny requests to unknown ports
-http_access deny !Safe_ports
-# http_access allow opera_match
-http_access deny !whitelist
-# http_access allow urlmatch
+http_access allow whitelist
 
-# Deny CONNECT to other than SSL ports
-http_access deny CONNECT !SSL_ports
-
-http_access allow all
 http_access deny to_localhost
-http_access allow localnet
+# http_access allow localnet
+
+# http_access allow Safe_ports
 
 # And deny all other access to this proxy
 http_access deny all
